--- a/src/components/work.css
+++ b/src/components/work.css
@@ -88,7 +88,6 @@ section .scroll.text1 {
     padding: 10px 20px !important;
     margin: 0 !important;
     font-size: 15px;
-
 }
 
 .card-img-top {
@@ -103,6 +102,7 @@ section .scroll.text1 {
     width: 30%;
     height: 30%;
 } */
+
 
 @media screen and (max-width: 768px) {
 
@@ -130,6 +130,12 @@ section .scroll.text1 {
     .workPageDivButton001 {
         width: 100% !important;
         text-align: center !important;
+    }
+
+    .workPageDivButton {
+        padding: 15px 20px !important;
+        font-size: 20px;
+        width: 100% !important;
     }
 
     .workPageDivCard {
