--- a/src/components/work.css
+++ b/src/components/work.css
@@ -1,3 +1,15 @@
+.reveals {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.reveals.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
 section {
     display: flex;
     justify-content: flex-start;
