--- a/src/components/Books.css
+++ b/src/components/Books.css
@@ -1,3 +1,24 @@
+/* For Tablet View */
+@media screen and (min-device-width: 769px) and (max-device-width: 1024px) {
+
+    .bookPageHeading {
+        font-size: 45px !important;
+        /* line-height: 10vw !important; */
+        min-height: 110px !important;
+    }
+
+    .bookPage {
+        padding-top: 0px !important;
+        padding-bottom: 0px !important;
+        margin: 30px 0 !important;
+        min-height: 515px !important;
+    }
+
+    .bookImageResponse {
+        padding-right: 0px !important;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .bookPage {
         width: 85% !important;
