--- a/src/components/Experience1.css
+++ b/src/components/Experience1.css
@@ -34,6 +34,31 @@ tr {
     font-size: 23px;
 }
 
+/* For Tablet View */
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .newexperienceblogTwoMainInnerDiv {
+        flex-wrap: nowrap !important;
+    }
+
+    .newexperienceblogTwoMainImgCardStyle {
+        margin: 10px 0px !important;
+        padding: 10px 25px !important;
+    }
+
+    .newexperienceblogTwoMainLogoStyle {
+        width: 50% !important;
+
+    }
+
+    .newexperienceblogTwoMainImgCardStyle {
+        margin: 0 0 0 0 !important;
+    }
+
+    .newexperienceblogHeadingButtonDiv {
+        margin-top: 0px !important;
+    }
+}
+
 @media screen and (max-width: 768px) {
 
     .newtableOne {
