--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,3 +1,13 @@
+/* For Tablet View */
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .footerLogo p {
+        /* margin: auto 0; */
+        width: 30% !important;
+        /* font-size: 21px; */
+        /* font-weight: 100; */
+    }
+}
+
 @media screen and (max-width: 768px) {
     .footerPage {
         width: 100% !important;
