--- a/src/components/work.css
+++ b/src/components/work.css
@@ -87,8 +87,24 @@
 
 /* For Tablet View */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    .workPageDivIconImgDone {
+        height: 50px !important;
+        width: 80px !important;
+        margin: 25px 10px !important;
+    }
+
     .workPageDivButton001 {
         width: 30% !important;
+    }
+
+    .cardGroup {
+        width: 30%;
+        /* height: 20%; */
+        margin: 10px;
+    }
+
+    .card-img-top {
+        height: 100% !important;
     }
 
     .workPageDivBox {
