--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -1,3 +1,15 @@
+.teamReveals {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.teamReveals.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
 @media screen and (max-width: 1280px) {
     .teamCardDiv {
         width: 70% !important;
