--- a/src/components/Books.css
+++ b/src/components/Books.css
@@ -1,3 +1,15 @@
+.bookReveals {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.bookReveals.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
 @media screen and (max-width: 1280px) {
     .bookImageResponse {
         /* padding: 15px !important; */
