--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,3 +1,15 @@
+.contactReveals {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 2s ease;
+}
+
+.contactReveals.active {
+    transform: translateY(0px);
+    opacity: 1;
+}
+
 .airplaneContainer {
     position: absolute;
     z-index: -1;
